[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "arxiv>=2.2.0",
    "langchain>=0.3.27",
    "langsmith>=0.4.31",
    "openai>=1.109.1",
    "python-dotenv>=1.1.1",
]
